--- a/statistical_learning.Rmd
+++ b/statistical_learning.Rmd
@@ -107,6 +107,32 @@ lasso_cv |>
 ```
 
 ## Penguin
+```{r}
+library(palmerpenguins)
+
+data("penguins")
+
+penguins |> 
+  ggplot(aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + 
+  geom_point()
+
+penguins = 
+  penguins |> 
+  select(species, bill_length_mm, flipper_length_mm) |> 
+  drop_na()
+
+kmeans_fit = 
+  penguins |> 
+  select(-species) |> 
+  # standardize the axis
+  scale() |> 
+  kmeans(centers = 3)
+
+penguins |> 
+  broom::augment(kmeans_fit, data = _) |> 
+  ggplot(aes(x = bill_length_mm, y = flipper_length_mm, color = .cluster)) +
+  geom_point()
+```
 
 
 
